gccida/c1/precompute_arguments
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/precompute_arguments/src/calls.c:1952:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/precompute_arguments/src/calls.c:1974:48: error: use of undeclared identifier 'machine_mode'
args[v6 / 0xA8].value = convert_modes( mode, ( machine_mode)v9, v8, args[v6 / 0xA8].unsignedp); 
                                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/precompute_arguments/src/obj/calls.o] Error 1
